--- a/express-mongo/package.json
+++ b/express-mongo/package.json
@@ -17,5 +17,9 @@
     "mongodb": "^6.7.0",
     "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.33.0",
+    "globals": "^15.4.0"
   }
 }
